--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.evercalm.evercalmsenses" >
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +23,29 @@
         <activity
             android:name=".MainTabbedActivity"
             android:label="@string/title_activity_main_tabbed"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+
+        <service
+            android:name=".EmpaticaService"
+            android:enabled="true" />
+        <!--
+        <service
+            android:name=".EmpaticaService"
+            android:enabled="true" />
+
+        <service
+            android:name=".EmpaticaService"
+            android:exported="false" />
+        -->
+
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name=".LoginSimpleActivity"
+            android:label="@string/title_activity_login_simple"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
