--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     //compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.loopj.android:android-async-http:1.4.6'
     compile project(':empalink-2.0')
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
